# rust-recipes

./: .gitignore  Cargo.toml  README.md  build.rs  run  run_c  run_linux  run_mac  run_rpi  run_test
.cargo/: config.toml
.github/workflows/: rust.yml
dynamic_library/: Cargo.toml  README.md
dynamic_library/src/: Makefile  base_functions.rs  call_rust.c  lib.rs
main/: Cargo.toml  README.md  build.rs
main/src/: lib.rs  main.rs
main/src/another_library/: err_with_backtrace.rs  lib.rs
main/src/util/: Makefile  alignment.rs  alloc.rs  associated_types.rs  asyncer.rs  conditional_compilation.rs  dynamic_dispatch.rs  errors.rs  ffi.rs  generics_vs_associated_types.rs  hashes.rs  inline_assembly.rs  interfaces.rs  manual_async.rs  math.rs  mod.rs  mylib.c  mylib.h  pinning.rs  references.rs  simd.rs  slices.rs  template_functions.rs  threading.rs  threading_shared_state.rs  traits.rs  unions.rs
main/tests/: integration_test.rs
rustasync/: Cargo.toml
rustasync/src/: main.rs
src/: main.rs
src/another_library/: hello_producer.rs  lib.rs  testing.rs
src/util/: Makefile  alloc.rs  associated_types.rs  asyncer.rs  cell.rs  closures.rs  conditional_compilation.rs  errors.rs  ffi.rs  generics.rs  generics_vs_associated_types.rs  glibc.rs  global_alloc.rs  inline_assembly.rs  interfaces.rs  manual_async.rs  manual_async_futures.rs  math.rs  mod.rs  mylib.c  mylib.h  pinning.rs  refcell.rs  template_functions.rs  testing.rs  threading.rs  threading_shared_state.rs  traits.rs  unions.rs
tests/: integration_test.rs
