[package]
name = "rust-recipes"
version = "0.1.0"
edition = "2021"
build = "build.rs"
links = "mylib"
default-run = "rust-recipes"

[features]
secret_of_life_known = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
libc = "0.2.139"
futures = "0.3.25"

[[bin]]
name = "another_binary"

[[bin]]
name = "share_fd_1"

[[bin]]
name = "share_fd_2"

[lib]
name = "another_library"
path = "src/another_library/lib.rs"
